# tedit

./: .gitignore  CHANGELOG.md  CMakeLists.txt  README.md  TUI-Editor-Complete-Feature-Specification.md
.github/workflows/: ci.yml
docs/: README.md  architecture.md  claude-code-instructions.md  codex-instructions.md  engineering-rules.md  implementation-checklist.md  product-scope.md  project-brief.md
docs/adr/: ADR-0001-use-c-and-cmake.md  ADR-0002-raw-terminal-rendering.md  ADR-0003-model-driven-editor.md  ADR-0004-nano-syntax-compatibility-layer.md
docs/plans/: MVP-001.md  MVP-002.md  MVP-003.md
docs/specs/: cross-platform.md  editor-behaviour.md  file-navigation.md  per-line-horizontal-scroll.md  search-replace-highlight.md  selection-cut-copy-paste.md  spelling.md  syntax-highlighting.md
docs/superpowers/plans/: 2026-07-09-mvp-001-closeout.md  2026-07-09-mvp-001-core-editor-slice.md  2026-07-09-mvp-001-input-save-polish.md  2026-07-09-mvp-001-save-and-navigation.md  2026-07-09-mvp-002-undo-search-selection.md  2026-07-09-mvp-003-file-ui-syntax-foundation.md
src/: main.c
src/core/: app_info.h  document.c  document.h  editor.c  editor.h  keymap.c  keymap.h  search.c  search.h  syntax.c  syntax.h  undo.c  undo.h
src/platform/: platform.c  platform.h  terminal_posix.c  terminal_win32.c
src/renderer/: ansi_renderer.c  ansi_renderer.h  screen_buffer.c  screen_buffer.h
src/ui/: editor_view.c  editor_view.h  file_browser.c  file_browser.h  menu.c  menu.h  status_bar.c  status_bar.h
tests/: test_main.c
(+2 files in other folders)
